[project]
name = "letterboxd-feed"
version = "0.1.0"
description = ""
authors = [
    {name = "Erick",email = "efm.physics@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "letterboxdpy @ git+https://github.com/nmcassa/letterboxdpy.git",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "lxml (>=5.3.2,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "streamlit (>=1.44.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
